deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloapp
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      containers:
        - name: helloapp
          image: bpastukh/helloapp:v1.0
          ports:
            - name: web
              containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /health/
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /health/
            initialDelaySeconds: 10
            periodSeconds: 5
